made all elements to be defauts in print. (still not fixed html elements cut off)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -161,13 +161,7 @@ input[type="checkbox"] {
 }
 @media print {
   /* ------------------------------------------------ */
-  body,
-  h1,
-  h2,
-  h3,
-  ol,
-  ul,
-  div {
+  * {
     width: auto;
     border: 0;
     margin: 0;
